# Diastasis

./: .gitignore  CHANGELOG.md  MANUAL.md  README.md  cli.py  geometry_engine.py  graph_solver.py  gui.py  gui_theme.py  main.py  output_generator.py  pyproject.toml  requirements.txt  run_gui.sh  social_media_post.md  svg_export.py  svg_parser.py
.github/workflows/: tests.yml
diastasis/: __init__.py  cli.py  color_utils.py  geometry_engine.py  graph_solver.py  gui.py  gui_tabs.py  main.py  output_generator.py  svg_export.py  svg_parser.py
diastasis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_color_utils.py  test_geometry_engine.py  test_graph_solver.py  test_main.py  test_output_generator.py  test_render_fidelity.py  test_svg_export.py  test_svg_parser.py
