[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diastasis"
version = "0.5.0"
description = "Separate complex SVG artwork into production-ready layers via graph coloring"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Charis Tsevis" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "svgpathtools>=1.7.2",
    "shapely>=2.0",
    "rtree>=1.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "lxml>=4.9",
]

[project.optional-dependencies]
gui = [
    "Pillow>=10.0",
    "cairosvg>=2.5.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/tsevis/Diastasis"
Changelog = "https://github.com/tsevis/Diastasis/blob/main/CHANGELOG.md"

[project.scripts]
diastasis = "diastasis.cli:main"

[tool.setuptools]
packages = ["diastasis"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
